[package]
name = "open-hypergraphs-dot"
version = "0.1.0"
edition = "2024"
description = "A library for visualizing lax open hypergraphs in GraphViz DOT format"
license = "MIT"

[lib]
name = "open_hypergraphs_dot"
path = "src/lib.rs"

[dependencies]
dot-structures = "0.1.1"
open-hypergraphs = "0.1.5"

[dev-dependencies]
graphviz-rust = "0.9.3"
