[package]
name = "open-hypergraphs-dot"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A library for visualizing lax open hypergraphs in GraphViz DOT format"
repository = "https://github.com/statusfailed/open-hypergraphs-dot"
documentation = "https://docs.rs/open-hypergraphs-dot"

[dependencies]
dot-structures = "0.1.1"
open-hypergraphs = "0.1.6"

[dev-dependencies]
graphviz-rust = "0.9.3"
